cleaned up preprocessor source

--- a/loader/package.json
+++ b/loader/package.json
@@ -4,7 +4,6 @@
   "description": "Data loader for hermes typeahead syste",
   "author": "Dean Chen<dean@ocirs.com>",
   "dependencies": {
-    "redis": "*",
-    "underscore": "*"
+    "redis": "*"
   }
 }
