completed server api

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "author": "Dean Chen<dean@ocirs.com>",
   "dependencies": {
     "redis": "*",
-    "underscore": "*"
+    "underscore": "*",
+    "async": "*"
   }
 }
