reimplemented redis pipeline, single threaded only now but performance increase of 3x

--- a/loader/package.json
+++ b/loader/package.json
@@ -4,6 +4,8 @@
   "description": "Data loader for hermes typeahead syste",
   "author": "Dean Chen<dean@ocirs.com>",
   "dependencies": {
-    "redis": "*"
+    "redis": "*",
+    "underscore": "*",
+    "async": "*"
   }
 }
